corrections "collapse.scss"

--- a/src/components/Collapse/collapse.scss
+++ b/src/components/Collapse/collapse.scss
@@ -1,43 +1,49 @@
 @import "../../sass/utils/variables.scss";
 
-
 .Collapse {
-    .Collapse-section {
-      background-color: #ff616f;
-      color: white;
-      margin-bottom: 1rem;
-      border-radius: 4px;
-  
-      .Collapse-title {
-        padding: 1rem;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        cursor: pointer;
-        border: none;
-        width: 100%;
-        text-align: left;
-        background-color: inherit;
-        color: inherit;
-  
-        &:focus {
-          outline: none;
-        }
-      }
-  
-      .Collapse-icon {
-        transform: rotate(0);
-        transition: transform 0.3s ease;
-  
-        &.open {
-          transform: rotate(-180deg);
-        }
-      }
-  
-      .Collapse-content {
-        padding: 1rem;
-        border-top: 1px solid white;
+  .Collapse-section {
+    background-color: $background-light;
+    color: $color-primary;
+    margin-bottom: 1rem;
+    border-radius: 4px;
+    
+
+    .Collapse-title {
+      padding: 1rem;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      cursor: pointer;
+      border: none;
+      width: 100%;
+      text-align: left;
+      background-color: $color-primary;
+      color: $color-secondary;
+      font-family: Montserrat;
+      font-size: 24px;
+      font-style: normal;
+      font-weight: 500;
+      border-radius: 5px;
+      
+
+      &:focus {
+        outline: none;
       }
     }
+
+    .Collapse-icon {
+      transform: rotate(0);
+      transition: transform 0.3s ease;
+      font-size: 2rem;
+
+      &.open {
+        transform: rotate(-180deg);
+      }
+    }
+
+    .Collapse-content {
+      padding: 1rem;
+      border-top: 1px solid white;
+    }
   }
-  
+}
